# vendor-zoobr_cluster_qt

./: .gitignore  CMakeLists.txt  README.md  ZoobrCluster.qmlproject  ZoobrCluster.qmlproject.qtds  main.qml  qmlmodules
android/: AndroidManifest.xml
content/: App.qml  BaseGauge.qml  CMakeLists.txt  CarStatus.qml  ClusterScreen.qml  DriveModeSelector.qml  Gauge.qml  GuideArrow.qml  GuideArrowItem.qml  LaneAssist.qml  LaneAssistWhiteLine.qml  LinearGauge.qml  MediaPlayer.qml  Menu.qml  MiddleGauge.qml  Navi.qml  NormalMode.qml  NormalModeContentItem.qml  Phone.qml  SpeedWarningIndicator.qml  SportGauge.qml  SportMode.qml  TellTales.qml  TellTalesIndicator.qml  TempGauge.qml
content/fonts/: qt_attribution.json
imports/: CMakeLists.txt
imports/ZoobrCluster/: CMakeLists.txt  Constants.qml  EventListSimulator.qml  MainModel.qml  MathAPI.qml  MediaPlayerModel.qml  NaviModel.qml  NormalModeModel.qml  PhoneModel.qml  SettingsMenuModel.qml  SpeedLimitImage.qml  SpeedLimitValues.qml  SportModeModel.qml  Style.qml  TellTalesModel.qml  Units.qml  qmldir
imports/ZoobrCluster/designer/: plugin.metainfo
imports/ZoobrCluster/src/: telemetrycontroller.cpp  telemetrycontroller.h  vehicleclient.cpp  vehicleclient.h
src/: app_environment.h  import_qml_plugins.h  main.cpp
